migrate stats to new config

--- a/src/main/resources/resouces.conf
+++ b/src/main/resources/resouces.conf
@@ -20,3 +20,10 @@ videobridge {
         }
     }
 }
+
+io.callstats.sdk.CallStats {
+    bridge-id="jitsi"
+    interval=1 second
+    # The bridge conference prefix to report to callstats.io, unset by default
+    conference-id-prefix=""
+}
