fix default conf file name, port videobridgestats to new config

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -19,6 +19,10 @@ videobridge {
             interval=10 seconds
         }
     }
+    octo {
+        # The configured region, unset by default
+        # region
+    }
 }
 
 io.callstats.sdk.CallStats {
