--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -19,6 +19,16 @@ videobridge {
             interval=10 seconds
         }
     }
+    health {
+        # The interval between health checks
+        interval=10 seconds
+        # The timeout for a health check
+        timeout=30 seconds
+        # Whether or not health check failures should be 'sticky'
+        # (i.e. once the bridge becomes unhealthy, it will never
+        # go back to a healthy state)
+        sticky-failures=false
+    }
     octo {
         # The configured region, unset by default
         # region
