use new config in videbridgeexpirethread

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,4 +1,5 @@
 videobridge {
+    expire-thread-interval=1 minute
     stats {
         enabled=true
         # The interval at which statistics will be sent
