use new config in main, videbridge

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,5 +1,17 @@
 videobridge {
     expire-thread-interval=1 minute
+    # The property that specifies allowed entities for turning on graceful
+    # shutdown mode. For XMPP API this is "from" JID. In case of REST
+    # the source IP is being copied into the "from" field of the IQ.
+    # TODO: use an allow-all regexp string by default instead of empty string
+    shutdown-allowed-source-regexp=""
+    # The property that specifies entities authorized to operate the bridge.
+    # For XMPP API this is "from" JID. In case of REST the source IP is being
+    # copied into the "from" field of the IQ.
+    # TODO: use an allow-all regexp string by default instead of empty string
+    authorized-source-regexp=""
+    # Which bridge APIs are enabled.  Se Videbridge for supported APIs
+    enabled-apis=[xmpp]
     stats {
         enabled=true
         # The interval at which statistics will be sent
@@ -15,7 +27,7 @@ videobridge {
          # The transports for sending statistics about the Videobridge.
          # See StatsManagerBundleActivator for supported transports.
         transports=[muc]
-        # Different transports can have indepedent options
+        # Different transports can have independent options
         muc {
             interval=10 seconds
         }
@@ -34,6 +46,24 @@ videobridge {
         # The configured region, unset by default
         # region
     }
+    xmpp {
+        #TODO: replace with a nested class of individual options, i.e.:
+        #processing-options {
+        #    allow-any-focus=false
+        #    allow-no-focus=false
+        #}
+        processing-options=0
+    }
+}
+
+# Ice4j properties are set as System properties (because that's how it currently
+# reads its config).  This means that we must serialize the values to strings,
+# so we can't use any 'fancy' value types here (e.g. if you want need a parameter
+# that is a duration, you can't use durations such as '5 seconds', but must
+# represent it as an int in the unit that ice4j expects like '5000').  Also,
+# the property names must match exactly what ice4j expects
+ice4j {
+    #TODO:  add ice4j settings here
 }
 
 io.callstats.sdk.CallStats {
