--- a/.github/workflows/jitsibuild.yml
+++ b/.github/workflows/jitsibuild.yml
@@ -15,6 +15,7 @@ jobs:
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/upload-artifact@v2
+        if: failure()
         with:
             name: logs
             path: logs
